Fixing styling on edit pages. Preventing registration for information that is too long.

--- a/app/content_static/styles/styles.css
+++ b/app/content_static/styles/styles.css
@@ -345,6 +345,7 @@ main > * {
 }
 .manage_content input,
 .manage_content textarea {
+	display: block;
 	margin-bottom: 0.5rem;
 	max-width: 400px;
 	width: 100%;
